--- a/shiny_app/www/custom.css
+++ b/shiny_app/www/custom.css
@@ -1,21 +1,26 @@
-/*.content-wrapper, .right-side {
+/*
+.content-wrapper, .right-side {
 	background-color: #990000;
-}*/
+}
+*/
 
 .skin-black .main-header .logo {
 	font-weight: bold;
 	background-color: #FFC72C;
 }
 
+/*
 .skin-black .main-header .logo:hover {
 	font-weight: bold;
 	background-color: #990000;
 }
+*/
 
-/*.skin-blue .main-header .navbar{
-	background-color: #990000;
-}*/
 
 .skin-black .main-sidebar .sidebar .sidebar-menu a{
 	background-color: #990000;
+}
+
+.content-wrapper {
+        background-color: #fff;
 }
