--- a/shiny_app/www/custom.css
+++ b/shiny_app/www/custom.css
@@ -24,3 +24,29 @@
 .content-wrapper {
         background-color: #fff;
 }
+
+.selectize-input {
+  height: max-content;
+  width: 70vw;
+  font-size: 24px;
+}
+
+.control-label {
+  max-width: 70vw;
+  font-size: 24px;
+  font-weight: bold;
+  width: max-content;
+}
+
+.default-font {
+  font-size: 24px;
+}
+
+.content a {
+  color: #900;
+  text-decoration: underline;
+}
+
+.content a:hover, a:visited:hover, a:focus {
+  color: #01548f;
+}
