moved font size from app.R to css

--- a/shiny_app/www/custom.css
+++ b/shiny_app/www/custom.css
@@ -21,6 +21,10 @@
 	background-color: #990000;
 }
 
+.main-sidebar { 
+  font-size: 20px; 
+}
+
 .content-wrapper {
         background-color: #fff;
 }
